--- a/css/calendar.weekend-mindset.css
+++ b/css/calendar.weekend-mindset.css
@@ -17,9 +17,9 @@
 
 :root {
     /* Blue Racing Color Palette */
-    --f1-bg: #0ddba7;
+    --f1-bg: #4eefc7;
     --f1-text: #F0F0FF;
-    --f1-primary: #f20b0b;
+    --f1-primary: #ff4e4e;
     /* Renault/McLaren blue */
     --f1-secondary: #ffd500;
     /* Cyan accent */
