--- a/css/calendar.weekend-mindset.css
+++ b/css/calendar.weekend-mindset.css
@@ -21,7 +21,7 @@
     --f1-text: #F0F0FF;
     --f1-primary: #ff4e4e;
     /* Renault/McLaren blue */
-    --f1-secondary: #ffd500;
+    --f1-secondary: #f3da5b;
     /* Cyan accent */
 
     /* Gradient Colors */
