--- a/css/calendar.golden-century.css
+++ b/css/calendar.golden-century.css
@@ -13,7 +13,7 @@
    - Elegant typography
    ========================================================================== */
 
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Marcellus:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Marcellus&display=swap');
 
 :root {
     /* Regal Color Palette */
